# mkdocs-anti-ai-scraper-plugin

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md  other-page.md
src/mkdocs_anti_ai_scraper_plugin/: __init__.py
