[project]
name = "mkdocs-anti-ai-scraper-plugin"
version = "0.0.1"
description = "Make it slightly harder for bots to steal your content"
authors = [
    {name = "six-two",email = "git@six-two.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs (>=1.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "mkdocs_anti_ai_scraper_plugin", from = "src"}]

[tool.poetry.plugins."mkdocs.plugins"]
anti_ai_scraper = "mkdocs_anti_ai_scraper_plugin:AntiScraperPlugin"

[tool.mypy]
files = ["src/**/*.py"]

